--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -37,4 +37,9 @@ jobs:
     - name: Test with pytest
       run: |
         python3 -m pytest tests/unit
+    - name: Test with pytest and coverage
+      run: |
+        python -m pip install coverage
+        python3 -m coverage run --source=src -m pytest tests/unit
+        python3 -m coverage report --fail-under=100 --show-missing
         
